Fixed text alignment in toolbar

--- a/src/gr/grnet/pithos/web/public/pithos.css
+++ b/src/gr/grnet/pithos/web/public/pithos.css
@@ -472,7 +472,9 @@ div#toolbar a {
 
 .pithos-toolbarItem span {
 	float: left;
+	padding-top: 2px;
 }
+
 .pithos-toolbarItem span.ico {
 	width: 16px;
 	height: 16px;
